--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "sass": "^1.76.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
