--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
