--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -13,10 +13,14 @@
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-kakao-login": "^2.1.1",
     "react-kakao-maps-sdk": "^1.1.26",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.76.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
