--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,6 @@ out/
 .vscode/
 
 ###개인정보###
-application.yml
+application.yaml
 application.properties
-application-test.yml
+application-test.yaml
