--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	implementation 'com.github.shin285:KOMORAN:3.3.9'
 	implementation 'org.apache.commons:commons-text:1.12.0'
 	implementation 'org.apache.opennlp:opennlp-tools:2.3.3'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.4'
 	compileOnly 'org.projectlombok:lombok'
 //	 runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
